[package]
name = "troet"
version = "0.3.0"
authors = ["Michael Borejdo <mib@electronic-minds.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winrt-notification = "*"

[dependencies.clap]
version = "2"
features = [ "suggestions", "color" ]